Small fix of new message position overlapped by the footer on mobile

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -716,6 +716,12 @@ $screen-menu:                     845px;
   padding-right: 32px !important;
   line-height: 42px;
 }
+
+.button-fab-bottom-left.has-footer,
+.button-fab-bottom-right.has-footer {
+  bottom: 64px !important;
+}
+
 /* ============
  Home page
 =============== */
